@@ -209,6 +209,7 @@ struct c3x_config {
 	bool show_territory_colors_on_water_tiles_in_minimap;
 	bool convert_some_popups_into_online_mp_messages;
 	bool enable_debug_mode_switch;
+	bool accentuate_cities_on_minimap;
 	bool enable_city_capture_by_barbarians;
 	bool share_visibility_in_hotseat;
 	bool share_wonders_in_hotseat;
