@@ -141,6 +141,11 @@ convert_some_popups_into_online_mp_messages = false
 ; debug mode already on will deactivate it.
 enable_debug_mode_switch = true
 
+; Places a small shadow below city dots on the minimap to make them more easily visible especially against light-colored territory. This feature does
+; not quite work properly so is left off by default. Its issues are (1) the shadows may not fully appear until you toggle the minimap from territory
+; to geography mode and back again and (2) the shadows may appear in geography mode.
+accentuate_cities_on_minimap = false
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
